chore: update project configuration and dependencies

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="mongodb+srv://Ayush_db:ayush160@pokedex.ubm76up.mongodb.net/pokedex?appName=Pokedex"
+SECRET_KEY="super-secret-pokemon-key"
+PORT=3000
