--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
-    "@vitejs/plugin-react-swc": "^3.11.0"
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "prisma": "^6.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -97,7 +98,6 @@
     "globals": "^15.15.0",
     "jsdom": "^20.0.3",
     "nodemon": "^3.0.2",
-    "prisma": "^6.3.1",
     "typescript-eslint": "^8.38.0",
     "vitest": "^3.2.4"
   }
